refactor: format folder structure same assignment
